# maxllm

./: .dockerignore  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-COMMERCIAL.md  Makefile  README.md  ROADMAP.md  TEST_PLAN.md  docker-compose.yml  insomnia_collection.json  maxllm.db  maxllm.toml
.github/workflows/: ci.yml
crates/maxllm-admin/: Cargo.toml
crates/maxllm-admin/src/: api.rs  budget.rs  costs.rs  keys.rs  lib.rs  models.rs  sqlite_store.rs  store.rs  teams.rs
crates/maxllm-cli/: Cargo.toml
crates/maxllm-cli/src/: main.rs
crates/maxllm-cli/src/commands/: config.rs  health.rs  init.rs  keys.rs  mod.rs  start.rs  status.rs  stop.rs  test.rs
crates/maxllm-config/: Cargo.toml
crates/maxllm-config/src/: lib.rs
crates/maxllm-gateway/: Cargo.toml
crates/maxllm-gateway/src/: circuit_breaker.rs  ctx.rs  gateway.rs  main.rs  metrics.rs  middleware.rs  routing.rs
crates/maxllm-gateway/tests/: integration.rs
crates/maxllm-plugin/: Cargo.toml
crates/maxllm-plugin/src/: chain.rs  context.rs  factory.rs  lib.rs
crates/maxllm-plugin/src/builtin/: auto_compaction.rs  cache.rs  cors.rs  ip_restriction.rs  key_auth.rs  keyword_block.rs  max_size.rs  mod.rs  pii_filter.rs  prompt_guard.rs  rate_limit.rs  regex_guard.rs  request_id.rs  secret_scan.rs  webhook.rs
crates/maxllm-plugin/src/guardrail/: builtin.rs  cel.rs  mod.rs  webhook.rs
crates/maxllm-translate/: Cargo.toml
crates/maxllm-translate/src/: anthropic.rs  anthropic_stream.rs  azure_openai.rs  bedrock.rs  cohere.rs  cohere_stream.rs  formats.rs  gemini.rs  gemini_stream.rs  lib.rs  openai.rs  openai_compat.rs
docs/: index.html
examples/: openai_sdk_demo.py
perf/: bare_proxy.toml  benchmark.sh  benchmark_clean.sh  mock_upstream  mock_upstream.py  mock_upstream.rs  post.lua  post_mock.lua  post_proxy.lua  post_stream.lua
tests/sdk/: bug_hunt.py  test_all.py  test_langchain.py
