[workspace]
members = [
    "crates/maxllm-config",
    "crates/maxllm-plugin",
    "crates/maxllm-translate",
    "crates/maxllm-gateway",
    "crates/maxllm-admin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ahash = "0.8"
