[package]
name = "maxllm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "maxllm"
path = "src/main.rs"

[dependencies]
maxllm-config = { path = "../maxllm-config" }
clap = { version = "4", features = ["derive", "env"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "signal"] }
nix = { version = "0.29", features = ["signal", "process"] }
