[package]
name = "maxllm-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "maxllm-server"
path = "src/main.rs"

[dependencies]
maxllm-config = { path = "../maxllm-config" }
maxllm-plugin = { path = "../maxllm-plugin" }
maxllm-translate = { path = "../maxllm-translate" }
maxllm-admin = { path = "../maxllm-admin" }
pingora = { version = "0.8.0", default-features = false, features = ["lb", "openssl"] }
pingora-limits = "0.8.0"
serde_json = { workspace = true }
ahash = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
prometheus = "0.13"
bytes = "1"
async-trait = "0.1"
http = "1"
once_cell = "1"
url = "2"
toml = { workspace = true }
tokio = { version = "1", features = ["rt"] }
arc-swap = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = { workspace = true }
wiremock = "0.6"
portpicker = "0.1"
tempfile = "3"
